Search and remove favorites working

--- a/app.html
+++ b/app.html
@@ -70,7 +70,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Search Movies" data-bs-toggle="tooltip"
                             data-bs-placement="top" data-bs-title="Enter a movie title" id="movie-search">
-                        <button class="btn btn-outline-primary">Search</button>
+                        <button onclick="displaySearchResults()" class="btn btn-outline-primary">Search</button>
                     </div>
                 </div>
                 <div class="col text-center text-md-start">
