Moving things to the right places

--- a/app.html
+++ b/app.html
@@ -67,22 +67,27 @@
         <div class="container mt-5">
             <div class="row row-cols-1 gy-3">
                 <div class="col">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search Movies" data-bs-toggle="tooltip"
-                            data-bs-placement="top" data-bs-title="Enter a movie title" id="movie-search">
-                        <button onclick="displaySearchResults()" class="btn btn-outline-primary">Search</button>
-                    </div>
+                    <form onsubmit="return false">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search Movies" data-bs-toggle="tooltip"
+                                data-bs-placement="top" data-bs-title="Enter a movie title" id="movie-search" autocomplete="off">
+                            <button default onclick="displaySearchResults()"
+                                class="btn btn-outline-primary">Search</button>
+                        </div>
+                    </form>
                 </div>
                 <div class="col text-center text-md-start">
                     <div class="btn-group" role="group" id="btn-bar">
-                        <input type="radio" onchange="displayNowPlayingMovies()" class="btn-check" name="btn-radio" id="btn-now-playing" autocomplete="off"
-                            checked>
+                        <input type="radio" onchange="displayNowPlayingMovies()" class="btn-check" name="btn-radio"
+                            id="btn-now-playing" autocomplete="off" checked>
                         <label for="btn-now-playing" class="btn btn-outline-primary">Now Playing</label>
 
-                        <input type="radio" onchange="displayPopularMovies()" class="btn-check" name="btn-radio" id="btn-popular" autocomplete="off">
+                        <input type="radio" onchange="displayPopularMovies()" class="btn-check" name="btn-radio"
+                            id="btn-popular" autocomplete="off">
                         <label for="btn-popular" class="btn btn-outline-primary">Popular</label>
 
-                        <input type="radio" onchange="displayFavorites()" class="btn-check" name="btn-radio" id="btn-favorites" autocomplete="off">
+                        <input type="radio" onchange="displayFavorites()" class="btn-check" name="btn-radio"
+                            id="btn-favorites" autocomplete="off">
                         <label for="btn-favorites" class="btn btn-outline-primary">Favorites</label>
                     </div>
                 </div>
@@ -133,8 +138,10 @@
                     </div>
                 </div>
                 <div class="card-footer d-flex justify-content-between">
-                    <button onclick="addFavoriteMovie(this)" class="btn btn-outline-success" data-fav="false">Add Fav</button>
-                    <button onclick="removeFavoriteMovie(this)" class="btn btn-outline-danger" data-fav="true">Remove Fav</button>
+                    <button onclick="addFavoriteMovie(this)" class="btn btn-outline-success" data-fav="false">Add
+                        Fav</button>
+                    <button onclick="removeFavoriteMovie(this)" class="btn btn-outline-danger" data-fav="true">Remove
+                        Fav</button>
                     <a href="#" class="btn btn-outline-primary">More Info</a>
 
                 </div>
