--- a/movieDetails.html
+++ b/movieDetails.html
@@ -25,6 +25,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Swiper js -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- My CSS -->
     <link href="/css/themes.css" rel="stylesheet">
     <link href="/css/prism.css" rel="stylesheet">
@@ -74,12 +76,37 @@
                                 <img class="img-fluid" id="movie-poster">
                             </div>
                             <div class="col-12 col-md-8 col-xl-9">
-                                <h3 class="display-6 fw-bold mb-0" id="movie-title"></h3>
+                                <h3 class="display-6 fw-bold mt-1 mb-0" id="movie-title"></h3>
                                 <div class="hstack gap-2">
                                     <div id="movie-cert"></div>
                                     <div id="movie-release"></div>
                                     <div id="movie-runtime"></div>
+                                    <div id="movie-genres"></div>
                                 </div>
+                                <div class="mt-2" id="movie-tagline"></div>
+                                <h5 class="lead fw-bold mt-3">Overview</h5>
+                                <p id="movie-overview"></p>
+                                <h5 class="lead fw-bold mt-3" id="movie-rating"></h5>
+                                <button data-bs-toggle="modal" data-bs-target="#movie-trailer-modal"
+                                    class="btn btn-outline-primary mt-2" id="btn-trailer"><i class="bi bi-play"></i>Play
+                                    Trailer</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-xxl">
+                <div class="row">
+                    <div class="col">
+                        <div class="mt-3">
+                            <h5 class="lead fw-bold">Top Billed Cast</h5>
+                            <div class="swiper">
+                                <div class="swiper-wrapper">
+                                </div>
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
+
+                                <div class="swiper-scrollbar"></div>
                             </div>
                         </div>
                     </div>
@@ -103,6 +130,27 @@
             </div>
         </div>
     </footer>
+    <!-- Trailer Modal -->
+    <div class="modal fade" id="movie-trailer-modal" tabindex="-1" aria-labelledby="trailerModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="trailerModalLabel">Trailer</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="ratio ratio-16x9">
+                        <iframe id="movie-trailer" allow="encrypted-media" src="" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Template -->
     <template id="movie-card-template">
         <div class="col">
@@ -132,10 +180,23 @@
         </div>
 
     </template>
+    <template id="actor-slide-template">
+        <div class="swiper-slide">
+            <div class="card">
+                <img class="card-img-top object-fit-cover" data-actor-image src="/img/ProfileImage.jpg" alt="Actor Photo" style="max-height: 175px;">
+                <div class="card-body">
+                    <div class="card-title lead fw-bold actor-name"></div>
+                    <div class="card-text text-muted italic"></div>
+                </div>
+            </div>
+        </div>
+    </template>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
         const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
@@ -143,7 +204,50 @@
     <!-- My JS -->
     <script src="/js/tmdbAPI.js"></script>
     <script src="/js/app.js"></script>
+    <!--initilize swiper for actor cards-->
     <script>
+        const swiper = new Swiper('.swiper', {
+            // Default parameters
+            slidesPerView: 1,
+            spaceBetween: 10,
+            // Navigation arrows
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+            // And if we need scrollbar
+            scrollbar: {
+                el: '.swiper-scrollbar',
+            },
+
+            // Responsive breakpoints
+            breakpoints: {
+                // when window width is >= 320px
+                320: {
+                    slidesPerView: 2,
+                    spaceBetween: 20
+                },
+                // when window width is >= 480px
+                480: {
+                    slidesPerView: 3,
+                    spaceBetween: 30
+                },
+                // when window width is >= 640px
+                768: {
+                    slidesPerView: 5,
+                    spaceBetween: 40
+                },
+                1200: {
+                    slidesPerView: 7,
+                    spaceBetween: 40
+                }
+            }
+        })
+    </script>
+    <script>
+        const movieTrailerModal = document.getElementById('movie-trailer-modal');
+        addEventListener('show.bs.modal', loadVideo);
+        addEventListener('hide.bs.modal', unloadVideo);
         displayMovieDetails();
     </script>
 </body>
